_sass/_navigation.scss
a {
	text-decoration: none;
}
ul, ul ul {
	margin: 0;
	padding: 0;
	list-style: none;
}
#wrapper {
	float:left;
	width: 250px;
	height: 94vh;
	margin: 10px;
	overflow: scroll;
}
.menu {
	width: auto;
	height: auto;
}
.menu > li > a {
	width: 100%;
	height: 2em;
	color:#505050;
	line-height: 2em;
	display: block;
	position: center;
	padding-right: .25em;
}
.menu ul li a {
	width: 100%;
	height: 2.25em;
	line-height: 1em;
	text-indent: .75em;
	display: block;
	position: center;
}
.menu ul li:last-child a {
}
.menu > li > a:hover, .menu > li > a.active {
	color: #428BCB;
}
.menu > li > a.active {
	color: #428BCB;
}
.menu > li > a:before {
	font-size: 36px;
	height: 1em;
	width: 1em;
	position: absolute;
	left: 0;
	top: 50%;
	margin: -.5em 0 0 0;
}

.menu > li > ul li a:before{
	font-size: 8px;
	position: absolute;
	width: 1em;
	height: 1em;
	top: 0;
	left: -2.7em;
}

.menu > li > ul li:hover a,
.menu > li > ul li:hover a:before {
	color:#428BCB;
}

.navContainer {
	font-weight:bold;
	margin-top:2px;
	margin-left:0px;
}

.version {
	font-style:italic;
}

.navSubMenu {
	margin-left:1em;
}

